Fix selection appearing on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
 html, body, #root {
   height: 100%;
   overflow-x: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 html {
